<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BestrockTogether</string>
    <string name="Server_Port">Server Port</string>
    <string name="Server_IP">Server IPV4</string>
    <string name="start_proxy">Start Proxy</string>
    <string name="proxy_started">Proxy Started</string>
    <string name="proxy_not_started">Proxy not started</string>
    <string name="proxy_stopped">Proxy Stopped</string>
    <string name="Test_connexion">Test connection</string>
    <string name="My_servers">My servers :</string>
    <string name="delete">DELETE</string>
    <string name="players">players</string>

</resources>